# bitvec

./: .editorconfig  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  ROADMAP.md  dev.ps1
c/: Doxyfile  Justfile  README.md  bitvec_iterator.cpp  demo.c  demo.cpp
c/bitvec/: bitslice.h  bitslice.hpp  bitvec.h  bitvec.hpp  lib.h  lib.hpp
csharp/: README.md
examples/: readme.rs  sieve.rs  tour.rs
javascript/: README.md
python/: README.md
ruby/: README.md
rust/: Cargo.toml  Justfile  README.md  book.toml
rust/book/: SUMMARY.md  accessory.md  api.md  pointer.md  prologue.md  slice.md
rust/doc/: Bit Patterns.md
rust/src/: bits.rs  boxed.rs  ffi.rs  pointer.rs  slice.rs  vec.rs
rust/src/ffi/: slice.rs  vec.rs
rust/tests/: domain.rs
src/: lib.rs  slice.rs  vec.rs
typescript/: README.md
